force-app/main/default/objects/docutizexa__Action__c/docutizexa__Action__c.object-meta.xml
<CustomObject>
    <customHelpPage>docutizexa__OproartsHelp</customHelpPage>
    <label>document DX Action</label>
    <nameField>
        <displayFormat>A-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>document DX Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>