force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__AdditionalParameters__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__AdditionalParameters__c</fullName>
    <inlineHelpText>項目として用意されていないパラメーターはこの項目を使ってください。項目の値は、名前/値のペアからなるJSONオブジェクトの形式でなければいけません。指定を省略した場合、親レコードの同名項目の値を利用します。</inlineHelpText>
    <label>Additional Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>