force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__AssignTargetTo__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__AssignTargetTo__c</fullName>
    <label>Assign Target To</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>