force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__AttachmentNetworkId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__AttachmentNetworkId__c</fullName>
    <label>Attachment Network ID</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>