force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__AttachmentOwnerId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__AttachmentOwnerId__c</fullName>
    <label>Attachment Owner ID</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>