force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__AttachmentParentId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__AttachmentParentId__c</fullName>
    <label>Attachment Parent ID</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>