force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__CreatesAttachment__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__CreatesAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Attachment</label>
    <type>Checkbox</type>
</CustomField>