force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__CreatesFileAttachment__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__CreatesFileAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create File Attachment</label>
    <type>Checkbox</type>
</CustomField>