force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__CreatesTask__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__CreatesTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>