force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__EndDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EndDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>