force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__FileName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>