force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__FontEmbed__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__FontEmbed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Embed Font</label>
    <type>Checkbox</type>
</CustomField>