force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__IsActive__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>