force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__JoinDocuments__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__JoinDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Join Documents</label>
    <type>Checkbox</type>
</CustomField>