force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__LabelLanguage__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__LabelLanguage__c</fullName>
    <label>Label Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>