force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailBcc__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailBcc__c</fullName>
    <label>Mail Bcc</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>