force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailBody__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailBody__c</fullName>
    <label>Mail Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>