force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailCc__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailCc__c</fullName>
    <label>Mail Cc</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>