force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailCharset__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailCharset__c</fullName>
    <label>Mail Charset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>