force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailFrom__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailFrom__c</fullName>
    <label>Mail From</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>