force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailReplyTo__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailReplyTo__c</fullName>
    <label>Mail ReplyTo</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>