force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailSubject__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailSubject__c</fullName>
    <label>Mail Subject</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>