force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailTemplate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailTemplate__c</fullName>
    <label>Mail Template</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>