force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailTo__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailTo__c</fullName>
    <label>Mail To</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>