force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailZip__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailZip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zip Mail Attachment</label>
    <type>Checkbox</type>
</CustomField>