force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailZipPassword__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailZipPassword__c</fullName>
    <label>Mail Zip Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>