force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailZipPasswordMailBody__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailZipPasswordMailBody__c</fullName>
    <label>Mail Zip Password Mail Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>