force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__MailZipPasswordMailSubject__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MailZipPasswordMailSubject__c</fullName>
    <label>Mail Zip Password Mail Subject</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>