force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__Mapping__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Mapping__c</fullName>
    <label>Mapping</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>