force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__NamespacePrefix__c</fullName>
    <label>Namespace Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>docutizexa</fullName>
                <default>true</default>
                <label>docutizexa</label>
            </value>
            <value>
                <fullName>appsfs</fullName>
                <isActive>false</isActive>
                <label>appsfs</label>
            </value>
            <value>
                <fullName>docutize</fullName>
                <isActive>false</isActive>
                <label>docutize</label>
            </value>
            <value>
                <fullName>oproarts1</fullName>
                <isActive>false</isActive>
                <label>oproarts1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>