force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__NotificationId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__NotificationId__c</fullName>
    <label>Notification ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>