force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__Operation__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pdf</fullName>
                <default>true</default>
                <label>pdf</label>
            </value>
            <value>
                <fullName>opr</fullName>
            </value>
            <value>
                <fullName>odp</fullName>
            </value>
            <value>
                <fullName>excelMerge</fullName>
            </value>
            <value>
                <fullName>excelMergeDDO</fullName>
            </value>
            <value>
                <fullName>wordMergeDDO</fullName>
            </value>
            <value>
                <fullName>csv</fullName>
            </value>
            <value>
                <fullName>d3w</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>