force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__OutputSetting__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OutputSetting__c</fullName>
    <label>OutputSetting</label>
    <referenceTo>docutizexa__OutputSettings__c</referenceTo>
    <relationshipName>OproartsActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>