force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__Preview__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preview</label>
    <type>Checkbox</type>
</CustomField>