force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__RecordIds__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__RecordIds__c</fullName>
    <label>Record IDs</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>