force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__RemovePrefix__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__RemovePrefix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Prefix</label>
    <type>Checkbox</type>
</CustomField>