force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__Result__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Result__c</fullName>
    <label>Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>