force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__Service__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Service__c</fullName>
    <label>Service</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>docutizeb</fullName>
                <default>true</default>
                <label>docutizeb</label>
            </value>
            <value>
                <fullName>liveffb</fullName>
            </value>
            <value>
                <fullName>viewframer</fullName>
            </value>
            <value>
                <fullName>prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>