force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__StartDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>