force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__TaskDescription__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TaskDescription__c</fullName>
    <label>Task Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>