force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__TaskNoDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TaskNoDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Set Task Date</label>
    <type>Checkbox</type>
</CustomField>