force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__TaskOwnerId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TaskOwnerId__c</fullName>
    <label>Task Owner ID</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>