force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__TaskStatus__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TaskStatus__c</fullName>
    <label>Task Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>