force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TaskSubject__c</fullName>
    <label>Task Subject</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>