force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__Template__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Template__c</fullName>
    <label>Template</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>