force-app/main/default/objects/docutizexa__Action__c/fields/docutizexa__ZipEvenIfOnlyOne__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ZipEvenIfOnlyOne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zip Even If Only One</label>
    <type>Checkbox</type>
</CustomField>