force-app/main/default/objects/docutizexa__Action__c/recordTypes/docutizexa__docutizexa.recordType-meta.xml
<RecordType>
    <fullName>docutizexa__docutizexa</fullName>
    <active>true</active>
    <label>Document DX</label>
</RecordType>