force-app/main/default/objects/docutizexa__Action__c/recordTypes/docutizexa__liveffb.recordType-meta.xml
<RecordType>
    <fullName>docutizexa__liveffb</fullName>
    <active>true</active>
    <label>Live Bridge</label>
</RecordType>