force-app/main/default/objects/docutizexa__Action__c/recordTypes/docutizexa__prime.recordType-meta.xml
<RecordType>
    <fullName>docutizexa__prime</fullName>
    <active>false</active>
    <label>Prime</label>
</RecordType>