force-app/main/default/objects/docutizexa__Action__c/recordTypes/docutizexa__viewframer.recordType-meta.xml
<RecordType>
    <fullName>docutizexa__viewframer</fullName>
    <active>true</active>
    <label>ViewFramer</label>
</RecordType>