force-app/main/default/objects/docutizexa__Action__c/listViews/docutizexa__All.listView-meta.xml
<ListView>
    <fullName>docutizexa__All</fullName>
    <columns>NAME</columns>
    <columns>docutizexa__OutputSetting__c</columns>
    <columns>docutizexa__Service__c</columns>
    <columns>docutizexa__IsActive__c</columns>
    <columns>docutizexa__Status__c</columns>
    <columns>docutizexa__Template__c</columns>
    <columns>docutizexa__Mapping__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>