force-app/main/default/objects/docutizexa__Action__c/listViews/docutizexa__All_liveffb.listView-meta.xml
<ListView>
    <fullName>docutizexa__All_liveffb</fullName>
    <columns>NAME</columns>
    <columns>docutizexa__OutputSetting__c</columns>
    <columns>docutizexa__IsActive__c</columns>
    <columns>docutizexa__Status__c</columns>
    <columns>docutizexa__Operation__c</columns>
    <columns>docutizexa__Template__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>docutizexa__Action__c.docutizexa__liveffb</value>
    </filters>
    <label>All Live Brigde</label>
    <language>en_US</language>
</ListView>